updated styles for login and signup

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,3 +106,109 @@ body {
     outline: none;
     font-weight: bold;
 }
+
+.signup {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.signup-header {
+    margin: 50px 0px;
+}
+
+.signup form {
+
+    background-color: #312f2f;
+    padding: 30px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.signup form button {
+    border: none;
+    background-color: #ff0000;
+    color: white;
+    padding: 13px 20px;
+    border-radius: 8px;
+    margin-left: 10px;
+    font-weight: bold;
+}
+
+.signup form > div {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    
+    gap: 10px;
+}
+
+.signup form input {
+    width: 350px;
+    padding: 10px 10px;
+    outline: none;
+    border-radius: 8px;
+    font-weight: 800;
+    font-size: 16px;
+    
+    background-color: #f0f0f0;
+    border: none;
+}
+
+.login {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.login h1 {
+    margin: 50px 0px;
+}
+
+.login form {
+
+    background-color: #312f2f;
+    padding: 30px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.login form button {
+    border: none;
+    background-color: #ff0000;
+    color: white;
+    padding: 13px 20px;
+    border-radius: 8px;
+    margin-left: 10px;
+    font-weight: bold;
+}
+
+.login form>div {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    gap: 10px;
+}
+
+.login form input {
+    width: 350px;
+    padding: 10px 10px;
+    outline: none;
+    border-radius: 8px;
+    font-weight: 800;
+    font-size: 16px;
+
+    background-color: #f0f0f0;
+    border: none;
+}
